--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="a">
         <div class="b">
-            <img src="first-website-header.png" alt="🫤🫤" class="kep.">
+            <img src="first-website-header.png" alt="🫤🫤" class="kep">
             <div class="kun">
                 <div class="bela">
                     <h1>Hi, my name is</h1>
