--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                     <div class="kunbela">
                         <h1>Anakin Skywalker</h1>
                     </div>
+                    <p><b>Analytical, goal oriented leader</b> with proven track record in management and
+                        enforcement Space Fleet Operations or Frontend Development. Wide range of
+                        hands-on experience, including:
+                        </p>
                 </div>
             </div>
         </div>
