ul li illetve egy class

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                         enforcement Space Fleet Operations or Frontend Development. Wide range of
                         hands-on experience, including:
                         </p>
+                    <ul>
+                        <li>- Large scale construction projects oversight</li>
+                        <li>- Advanced forms of mind control</li>
+                        <li>- Planetary scale demolitions operations</li>
+                        <li>- Fugitive recovery services</li>
+                    </ul>
+                    <div class="negyzet"></div>
                 </div>
             </div>
         </div>
