--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -13,8 +16,8 @@
             <img src="first-website-header.png" alt="🫤🫤" class="kep">
             <div class="kun">
                 <div class="bela">
-                    <h1>Hi, my name is</h1>
                     <div class="kunbela">
+                        <h1 class="meses">Hi, my name is</h1>
                         <h1>Anakin Skywalker</h1>
                     </div>
                     <p><b>Analytical, goal oriented leader</b> with proven track record in management and
@@ -27,7 +30,7 @@
                         <li>- Planetary scale demolitions operations</li>
                         <li>- Fugitive recovery services</li>
                     </ul>
-                    <div class="negyzet"></div>
+                    <div class="negyzet">Together we can rule the galaxy</div>
                 </div>
             </div>
         </div>
