--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="a">
-        <div class="b">
+    <div>
+        <div>
             <img src="first-website-header.png" alt="🫤🫤" class="kep">
             <div class="kun">
                 <div class="bela">
+                  <h1>Hi, my name is</h1>
                     <div class="kunbela">
-                        <h1 class="meses">Hi, my name is</h1>
-                        <h1>Anakin Skywalker</h1>
+                        Anakin Skywalker
                     </div>
-                    <p><b>Analytical, goal oriented leader</b> with proven track record in management and
-                        enforcement Space Fleet Operations or Frontend Development. Wide range of
-                        hands-on experience, including:
+                    <br>
+                    <span><b>Analytical, goal oriented leader</b> with proven track record in management and
+                      enforcement Space Fleet Operations or Frontend Development. Wide range of
+                      hands-on experience, including:</span> 
                         </p>
                     <ul>
                         <li>- Large scale construction projects oversight</li>
@@ -30,7 +31,7 @@
                         <li>- Planetary scale demolitions operations</li>
                         <li>- Fugitive recovery services</li>
                     </ul>
-                    <div class="negyzet">Together we can rule the galaxy</div>
+                    <h4>Together we can rule the galaxy</h4>
                 </div>
             </div>
         </div>
