--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                         Anakin Skywalker
                     </div>
                     <br>
-                    <span><b>Analytical, goal oriented leader</b> with proven track record in management and
+                    <span style="font-family: 'Josefin Sans';"><b>Analytical, goal oriented leader</b> with proven track record in management and <br>
                       enforcement Space Fleet Operations or Frontend Development. Wide range of
                       hands-on experience, including:</span> 
                         </p>
-                    <ul>
-                        <li>- Large scale construction projects oversight</li>
-                        <li>- Advanced forms of mind control</li>
-                        <li>- Planetary scale demolitions operations</li>
-                        <li>- Fugitive recovery services</li>
+                    <ul style="font-family: 'Josefin Sans';">
+                        <li> Large scale construction projects oversight</li>
+                        <li> Advanced forms of mind control</li>
+                        <li> Planetary scale demolitions operations</li>
+                        <li> Fugitive recovery services</li>
                     </ul>
                     <h4>Together we can rule the galaxy</h4>
                 </div>
